--- a/portfolio.html
+++ b/portfolio.html
@@ -35,19 +35,19 @@
         <section class="projects">
             <div class="container">
                 <ul class="project-filter list">
-                    <li>
+                    <li class="project-button">
                         <button type="button" class="button-filter">Все</button>
                     </li>
-                    <li>
+                    <li class="project-button">
                         <button type="button" class="button-filter">Веб-сайты</button>
                     </li>
-                    <li>
+                    <li class="project-button">
                         <button type="button" class="button-filter">Приложения</button>
                     </li>
-                    <li>
+                    <li class="project-button">
                         <button type="button" class="button-filter">Дизайн</button>
                     </li>
-                    <li>
+                    <li class="project-button">
                         <button type="button" class="button-filter">Маркетинг</button>
                     </li>
                 </ul>
@@ -56,55 +56,55 @@
         <!--Скрытый заголовок-->
         <h1 class="hidden-title">Список проектов</h1>
         <ul class="project-list list">
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
                 <img src="./images/technokryak.jpg" alt="Фото Технокряк" width="370">
                 <h2 class="project-name" >Технокряк</h2>
                 <p class="project-desc">Веб-сайт</p>
                 </a>
             </li>
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
             <img src="./images/new_orlean.jpg" alt="Фото Нью орлеан" width="370">
                 <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                     <p class="project-desc">Дизайн</p>
                 </a>
                 </li>
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
             <img src="./images/seafood.jpg" alt="Фото Си фуд" width="370">
                 <h2 class="project-name">Ресторан Seafood</h2>
                     <p class="project-desc">Приложение</p>
                 </a>
                 </li>
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
                 <img src="./images/prime.jpg" alt="Фото Прайм" width="370">
                 <h2 class="project-name">Проект Prime</h2>
                 <p class="project-desc">Маркетинг</p>
                 </a>
             </li>
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
             <img src="./images/boxes.jpg" alt="Фото Боксес" width="370">
                 <h2 class="project-name">Проект Boxes</h2>
                 <p class="project-desc">Приложение</p>
             </a>
             </li>
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
             <img src="./images/no_borders.jpg" alt="Фото Но бордерс" width="370">
                 <h2 class="project-name">Inspiration has no Borders</h2>
                 <p class="project-desc">Веб-сайт</p>
             </a>
             </li>
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
             <img src="./images/limited_edition.jpg" alt="Фото Лимитед едишн" width="370">
                 <h2 class="project-name">Издание Limited Edition</h2>
                 <p class="project-desc">Дизайн</p>
             </a>
             </li>
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
             <img src="./images/lab.jpg" alt="Фото Лаб" width="370">
                 <h2 class="project-name">Проект LAB</h2>
                 <p class="project-desc">Маркетинг</p>
             </a>
             </li>
-            <li> <a href="" class="link">
+            <li class="project-item"> <a href="" class="link">
             <img src="./images/gr_business.jpg" alt="Фото растущий бизнес" width="370">
                 <h2 class="project-name">Growing Business</h2>
                 <p class="project-desc">Приложение</p>
