Исправляет геометрию и flex

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <a href="" class="logo-link"> <span class="logo-page-web">Web</span><span class="logo-page-studio">Studio</span></a>
             <nav>
                 <ul class="site-nav list">
-                    <li> <a href="./index.html" class="link current">Студия</a></li>
-                    <li> <a href="./portfolio.html" class="link">Портфолио </a></li>
-                    <li> <a href="./contacts.html" class="link">Контакты</a></li>
+                    <li class="item"> <a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"> <a href="./portfolio.html" class="link">Портфолио </a></li>
+                    <li class="item"> <a href="./contacts.html" class="link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contact-nav list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </div>
         
@@ -34,7 +34,7 @@
         <!--Main-->
         <main>
             <section class="section-hero-title">
-                <div class="container">
+                <div class="container hero">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         
                     <button type="button" class="hero button">Заказать услугу</button>
@@ -45,7 +45,7 @@
                 <div class="container">
                 <!--Наши преимущества-->
                 <!--Скрытый заголовок-->
-                <h2 class="hidden-title">Наши преимущества</h2>
+                <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="subtitle list">
                     <li class="features-item">
                         <h3 class="features">Внимание к деталям</h3>
@@ -78,25 +78,33 @@
                 </div>
               </section>
             <!--Наша команда-->
-            <section class="section-team">
+            <section class="section team">
                 <div class="container ">
                 <h2 class="section-team-title">Наша команда</h2>
                 <ul class="team-card list">
                     <li class="team-person"><img src="./images/Демьянинков.jpg" alt="Фото Демьяненко" width="270">
+                        <div class="name-block">
                         <h3 class="name">Игорь Демьяненко</h3>
                         <p class="job">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-person"><img src="./images/Репина.jpg" alt="Фото Репина" width="270">
+                        <div class="name-block">
                         <h3 class="name">Ольга Репина</h3>
                         <p class="job">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-person"><img src="./images/Тарасов.jpg" alt="Фото Тарасов" width="270">
+                        <div class="name-block">
                         <h3 class="name">Николай Тарасов</h3>
                         <p class="job">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-person"><img src="./images/Ермаков.jpg" alt="Фото Ермаков" width="270">
+                        <div class="name-block">
                         <h3 class="name">Михаил Ермаков</h3>
                         <p class="job">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
                 </div>
@@ -104,7 +112,7 @@
         </main>
         <!--Footer-->
         <footer class="footer-nav">
-            <div class="container">
+            <div class="container footer">
                 <a href="" class="logo-link"><span class="logo-page-web">Web</span><span
                         class="logo-page-studio-white">Studio</span></a>
                 <address class="adress">г. Киев, пр-т Леси Украинки, 26 <br>
