--- a/portfolio.html
+++ b/portfolio.html
@@ -19,20 +19,20 @@
             <a href="" class="logo-link"> <span class="logo-page-web">Web</span><span class="logo-page-studio">Studio</span></a>
             <nav>
                 <ul class="site-nav list">
-                    <li> <a href="./index.html" class="link ">Студия</a></li>
-                    <li> <a href="./portfolio.html" class="link current">Портфолио </a></li>
-                    <li> <a href="./contacts.html" class="link">Контакты</a></li>
+                    <li class="item"> <a href="./index.html" class="link ">Студия</a></li>
+                    <li class="item"> <a href="./portfolio.html" class="link current">Портфолио </a></li>
+                    <li class="item"> <a href="./contacts.html" class="link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contact-nav list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
     <!--Main-->
     <main>
-        <section class="projects">
+        <section class="section projects">
             <div class="container">
                 <ul class="project-filter list">
                     <li class="project-button">
@@ -54,60 +54,78 @@
                    
         <!--Main menu-->
         <!--Скрытый заголовок-->
-        <h1 class="hidden-title">Список проектов</h1>
+        <h1 class="visually-hidden">Список проектов</h1>
         <ul class="project-list list">
             <li class="project-item"> <a href="" class="link">
                 <img src="./images/technokryak.jpg" alt="Фото Технокряк" width="370">
+                <div class="project-block">
                 <h2 class="project-name" >Технокряк</h2>
                 <p class="project-desc">Веб-сайт</p>
+                </div>
                 </a>
             </li>
             <li class="project-item"> <a href="" class="link">
             <img src="./images/new_orlean.jpg" alt="Фото Нью орлеан" width="370">
+            <div class="project-block">
                 <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                     <p class="project-desc">Дизайн</p>
+                    </div>
                 </a>
-                </li>
+            </li>
             <li class="project-item"> <a href="" class="link">
             <img src="./images/seafood.jpg" alt="Фото Си фуд" width="370">
+            <div class="project-block">
                 <h2 class="project-name">Ресторан Seafood</h2>
                     <p class="project-desc">Приложение</p>
+                    </div>
                 </a>
                 </li>
             <li class="project-item"> <a href="" class="link">
                 <img src="./images/prime.jpg" alt="Фото Прайм" width="370">
+                <div class="project-block">
                 <h2 class="project-name">Проект Prime</h2>
                 <p class="project-desc">Маркетинг</p>
+                </div>
                 </a>
             </li>
             <li class="project-item"> <a href="" class="link">
             <img src="./images/boxes.jpg" alt="Фото Боксес" width="370">
+            <div class="project-block">
                 <h2 class="project-name">Проект Boxes</h2>
                 <p class="project-desc">Приложение</p>
+                </div>
             </a>
             </li>
             <li class="project-item"> <a href="" class="link">
             <img src="./images/no_borders.jpg" alt="Фото Но бордерс" width="370">
+            <div class="project-block">
                 <h2 class="project-name">Inspiration has no Borders</h2>
                 <p class="project-desc">Веб-сайт</p>
+                </div>
             </a>
             </li>
             <li class="project-item"> <a href="" class="link">
             <img src="./images/limited_edition.jpg" alt="Фото Лимитед едишн" width="370">
+            <div class="project-block">
                 <h2 class="project-name">Издание Limited Edition</h2>
                 <p class="project-desc">Дизайн</p>
+                </div>
             </a>
             </li>
             <li class="project-item"> <a href="" class="link">
             <img src="./images/lab.jpg" alt="Фото Лаб" width="370">
+            <div class="project-block">
                 <h2 class="project-name">Проект LAB</h2>
                 <p class="project-desc">Маркетинг</p>
+                </div>
             </a>
             </li>
             <li class="project-item"> <a href="" class="link">
             <img src="./images/gr_business.jpg" alt="Фото растущий бизнес" width="370">
+            <div class="project-block">
                 <h2 class="project-name">Growing Business</h2>
                 <p class="project-desc">Приложение</p>
+                </div>
             </a>
             </li>
         </ul>
@@ -117,7 +135,7 @@
 
     <!--Footer-->
     <footer class="footer-nav">
-        <div class="container">
+        <div class="container footer">
             <a href="" class="logo-link"><span class="logo-page-web">Web</span><span
                     class="logo-page-studio-white">Studio</span></a>
             <address class="adress">г. Киев, пр-т Леси Украинки, 26 <br>
