--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!--Чем мы занимаемся-->
             <section class="section activity">
                 <div  class="container activity">
-                    <h2 class="section activity-title">Чем мы занимаемся</h2>
+                    <h2 class="activity-title">Чем мы занимаемся</h2>
                     <ul class="list activity">
                         <li class="item-activity"><a href=""><img src="./images/box_1.jpg" alt="Клавиатура" width="370"> </a> </li>
                         <li class="item-activity"><a href=""><img src="./images/box_2.jpg" alt="Телефон+Монитор" width="370"></a></li>
@@ -80,7 +80,7 @@
             <!--Наша команда-->
             <section class="section team">
                 <div class="container ">
-                <h2 class="section-team-title">Наша команда</h2>
+                <h2 class="team-title">Наша команда</h2>
                 <ul class="team-card list">
                     <li class="team-person"><img src="./images/Демьянинков.jpg" alt="Фото Демьяненко" width="270">
                         <div class="name-block">
